<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">10ideas-android</string>
    <string name="_10_ideas">10 ideas</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="not_have_account">do not have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_account">do you have an account?</string>
    <string name="sign_out">Sign Out</string>
    <string name="dashbrd_my_ideas">My ideas</string>
    <string name="dashbrd_public_ideas">Public ideas</string>
    <string name="dashbrd_top_10">TOP 10</string>
    <string name="dashbrd_add_idea">Add idea</string>
    <string name="desc_refresh">refresh</string>
    <string name="home">Home</string>
    <string name="my_ideas">My Ideas</string>
    <string name="add_idea">Add Idea</string>
    <string name="view_idea">View Idea</string>
    <string name="edit_idea">Edit Idea</string>

    <string name="created_ideas">Created ideas\nfor today</string>
    <string name="desc_username">username</string>
    <string name="hint_idea_text">Enter your idea</string>
    <string name="hint_description">Description</string>
    <string name="public_chk">Public</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="idea_saved">Your idea has been saved</string>
    <string name="month_year">%1$s\n%2$s</string>
    <string name="count">%1$s/10</string>
    <string name="top_ideas">Top Ideas</string>
    <string name="votes_s">Votes: %1$s</string>
    <string name="public_ideas">Public Ideas</string>
    <string name="published">Already public</string>
    <string name="publish">Publish</string>
    <string name="vote">Vote</string>
</resources>
