<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/default_bg"
        android:orientation="vertical">

    <include
            android:id="@+id/titlebar"
            layout="@layout/titlebar"/>

    <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="10dp">

        <Button
                android:id="@+id/cancel"
                style="@style/DefaultButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"/>

        <Button
                android:id="@+id/save"
                style="@style/DefaultButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/buttons"
            android:layout_below="@id/titlebar"
            android:padding="10dp"
            android:orientation="vertical">

        <EditText
                android:id="@+id/idea_title"
                style="@style/DefaultEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_title"/>

        <EditText
                android:id="@+id/idea_desc"
                style="@style/DefaultEditText"
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_description"/>

        <CheckBox
                android:id="@+id/public_chk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingRight="4dp"
                android:textColor="@color/text_color"
                android:text="@string/public_chk"/>

    </LinearLayout>

</RelativeLayout>