<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="#FFF">

    <LinearLayout
            android:id="@+id/login_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

        <TextView
                android:id="@+id/text2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/have_account"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="#000"/>

        <Button
                android:id="@+id/login"
                style="@style/DefaultButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/login"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/login_container"
            android:gravity="center_vertical"
            android:orientation="vertical">

        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="6dp"
                    android:src="@drawable/logo"/>

            <View
                    android:layout_width="wrap_content"
                    android:layout_height="1px"
                    android:background="#CCC"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/text1"/>

            <View
                    android:layout_width="wrap_content"
                    android:layout_height="1px"
                    android:background="#CCC"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/text1"/>
        </RelativeLayout>

        <EditText
                android:id="@+id/username"
                style="@style/DefaultEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>

        <EditText
                android:id="@+id/password"
                style="@style/DefaultEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/password"
                android:inputType="textPassword"/>

        <Button
                android:id="@+id/sign_up"
                style="@style/DefaultButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:layout_marginLeft="30dip"
                android:layout_marginRight="30dip"
                android:text="@string/sign_up"/>
    </LinearLayout>

</RelativeLayout>